<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding_10dp"
            android:text="@string/open_page_with"
            android:textColor="@android:color/black"
            android:textSize="@dimen/size_18sp" />

        <TextView
            android:id="@+id/tvWikipedia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_10dp"
            android:text="@string/wikipedia_page"
            android:textColor="@android:color/black"
            android:textSize="@dimen/size_18sp" />

        <View
            android:id="@+id/tvFilterSuccessDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />


        <TextView
            android:id="@+id/tvYouTube"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_10dp"
            android:text="@string/youtube_page"
            android:textColor="@android:color/black"
            android:textSize="@dimen/size_18sp" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>